--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,1 +1,47 @@
-<h1>Hello World</h1>
+{% extends 'base.html' %}
+
+{% block content %}
+
+<div class='content-title'>Patients Records Table</div>
+
+<div style="margin-top: 100px;">Search: <input/></div>
+
+
+<div class="patient-table">
+    <table class="table">
+        <thead class="table-secondary">
+            <th>Patient No.</th>
+            <th>Last Name</th>
+            <th>First Name</th>
+            <th>Middle Name</th>
+            <th>Gender</th>
+            <th>Age</th>
+            <th>Contact No.</th>
+            <th>Date Added No.</th>
+            <th>Action</th>
+        </thead>
+           
+        <tbody>
+            {% for x in patientsdata %}
+            <tr>               
+                <td>{{x.id}}</td>     
+                <td>{{x.last_name}}</td>   
+                <td>{{x.first_name}}</td>   
+                <td>{{x.middle_name}}</td>   
+                <td>{{x.gender}}</td>    
+                <td>{{x.age}}</td>   
+                <td>{{x.contact_no}}</td>    
+                <td>{{x.created_at}}</td>         
+                
+            </tr>
+            {% endfor %}
+        </tbody>
+      
+    </table>
+   
+
+</div>  
+
+
+
+{% endblock content %}
