--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -4,7 +4,7 @@
 <div class="container bg-gradient">
     <nav class="navbar fixed-top" id="navgreen">
         <div class="container-fluid" id="logodiv">
-          <a class="navbar-brand" href="#">LNCRMS</a>
+          <a class="navbar-brand" href="#" style="font-family: 'Ubuntu', sans-serif;">LNCRMS</a>
         </div>
       </nav>
   </div>
