--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+{% block content %}
+
 
 <div class='content-title'>Patients Records Table</div>
 
@@ -15,7 +17,7 @@
 </div>
 
 <!-- Modal -->
-<div
+ <div
   class="modal fade"
   id="exampleModal"
   tabindex="-1"
@@ -36,32 +38,73 @@
         ></button>
       </div>
       <div class="modal-body">
-        <div class="input-group" style="padding: 10px">
-            <span class="input-group-text">Fullname</span>
-            <input type="text" aria-label="First name" class="form-control" placeholder="firstname">
-            <input type="text" aria-label="Last name" class="form-control"  placeholder="middlename">
-            <input type="text" aria-label="Last name" class="form-control"  placeholder="lastname">
+          <form action="{% url 'addpatient' %}" method="POST">
+            {% csrf_token %}
+        <div class="row g-3">
+          <div class="col">
+            <input type="text" class="form-control" placeholder="First name" name="fName">
           </div>
-          <div class="input-group" style="padding: 10px">
-            <span class="input-group-text">Address</span>
-            <input type="text" aria-label="Address" class="form-control" placeholder="permanent address">            
+          <div class="col">
+            <input type="text" class="form-control" placeholder="middle name" name="mName">
           </div>
+          <div class="col">
+            <input type="text" class="form-control" placeholder="Last name" name="lName">
+          </div>
+        </div>
 
-        <div style="padding: 20px">
-          First Name : <input /> 
-          Middle Name : <input /> 
-          Last Name : <input />
+        <div class="row g-3" style="padding-top: 10px;">
+          <div class="col-sm-8">
+            <input type="text" class="form-control" placeholder="Address"  name="address">
+          </div>
+           <div class="col">
+            <input type="text" class="form-control" placeholder="Contact No."  name="contactnum">
+          </div>
         </div>
-        <div style="padding: 20px">
-          Permanent Address: <input size="60" />
+        
+
+      <div class="row g-3" style="padding-top: 10px;">
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Birthday"  name="bday">
         </div>
+        <div class="col">
+          <select id="inputState" class="form-select"  name="gender">
+            <option selected>Gender</option>
+            <option>Male</option>
+            <option>Female</option>
+            <option>Other</option>
+          </select>
+        </div>
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Age"  name="age">
+        </div>
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Civil Status"  name="civilstatus">
+        </div>
+      </div>
+
+      <div class="form-floating" style="padding-top: 10px;">
+        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 200px"  name="remarks"></textarea>
+        <label for="floatingTextarea2">Remarks</label>
+      </div>
+      <button
+      class="btn btn-success"
+      type="submit"
+      data-bs-toggle="modal"
+      data-bs-target="#exampleModal"
+      style="position:relative;left: 600px;margin-top: 10px;">
+    <i class="bi bi-box-arrow-right"></i></i> Add Patient
+    </button>
+  </form>
+  </div>
       </div>
     </div>
   </div>
-</div>
+</div> 
+
+<!--PATIENTS TABLE-->
 
 <div class="patient-table">
-  <table class="table table-sm table-bordered">
+  <table class="table table-sm">
     <thead class="table-secondary">
       <th>Patient No.</th>
       <th>Last Name</th>
@@ -92,7 +135,7 @@
 
           <a
             role="button"
-            href="{% url 'patientdetails' %}"
+            href="{% url 'addpatient' %}"
             class="btn btn-outline-success btn-sm"
             ><i class="bi bi-pencil-square"></i
           ></a>
