--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -38,8 +38,40 @@
      </div>
 
      <div class="content-main">
-            <div class="title-tab">Patient List</div>
-            <div class="left-menu">a</div>
+
+            <div class="title-tab bg-gradient">Patient List</div>
+
+            <div class="container1">
+                <!--Left Menus-->
+                <div class="left-menu">
+                    <div class="active bg-gradient">Patient Records</div>
+                    <a href="#">Add Patient</a>
+                    <a href="#">Medicine List</a>
+                    <a href="#">Prescriptions</a>
+                  
+                    </div>
+                
+                
+                <!--Add new patient form-->
+                <div class="reg-area">
+                    {% include 'newpatient.html' %}
+                </div>
+
+            </div>
+
+            <!--Table contaier-->
+            <div class="container2">
+                <div class="table-title bg-gradient">
+                    Patient List
+                </div>
+            <div class="table-box">
+               {% include 'patientstable.html' %}
+               </div>
+            </div>
+
+
+
+
      </div>
 
      
