--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,81 +1,82 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>LNCRMS</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-                    
-        <!--Bootstrap CSS-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>LNCRMS</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!--Bootstrap CSS-->
     
-        <!--Bootstrap ICons-->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
 
-        <!--Custom CSS-->
-        <link rel="stylesheet" href="{% static 'style.css' %}">
+    <!--Bootstrap ICons-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
 
-       
-    </head>
-    <body>
-      <header class="nav-bar">
-            <strong class="logo-text">LNCRMS</strong>
-            <nav>
-                <ul class="nav-links">
-                    <li><a href="#">Dashboard</a></li>
-                    <li><a href="#">Settings</a></li>
-                    <li><a href="#">Patient List</a></li>
-                    <li><a href="#">Medications</a></li>                    
-                </ul>
-            </nav>
-            <a href="#"><button class="logout-btn">Logout</button></a>
-      </header>
+    <!--Datatable CSS-->
+    
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css"
+    />
 
-      <div class="title-container">
-        <i class="bi bi-prescription2"></i>Patients Records Management System
-     </div>
+    <!--Custom CSS-->
+    <link rel="stylesheet" href="{% static 'style.css' %}" />
 
-     <div class="content-main">
+    
 
-            <div class="title-tab bg-gradient">Patient List</div>
+  </head>
+  <body>
 
-            <div class="container1">
-                <!--Left Menus-->
-                <div class="left-menu">
-                    <div class="active bg-gradient">Patient Records</div>
-                    <a href="#">Add Patient</a>
-                    <a href="#">Medicine List</a>
-                    <a href="#">Prescriptions</a>
-                  
-                    </div>
-                
-                
-                <!--Add new patient form-->
-                <div class="reg-area">
-                    {% include 'newpatient.html' %}
+    <!--NavBar-->
+    {% include 'navbar.html' %}
+
+    <div class="title-container">
+      <i class="bi bi-prescription2"></i>Patients Records Management System
+    </div>
+
+    <div class="content-main">
+
+        <!--NOTIFICATIONS-->
+        {% if messages %}
+            {% for message in messages  %}
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    {{message}}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
+            {% endfor %}
+        {% endif %}
+   
+        {% block content%}    
+        {% endblock %}
 
-            </div>
-
-            <!--Table contaier-->
-            <div class="container2">
-                <div class="table-title bg-gradient">
-                    Patient List
-                </div>
-            <div class="table-box">
-               {% include 'patientstable.html' %}
-               </div>
-            </div>
+      
+      </div>
 
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous">
+    </script>
 
+    <!-- Datatable JS-->
+    <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+   
 
-     </div>
-
-     
-        
-        <script src="" async defer></script>
-    </body>
+    <!-- Data Script-->
+    <script>
+      $("#patienttable").DataTable({})
+    </script>
+  </body>
 </html>
