--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,63 +1,78 @@
 {% load static %}
 <!DOCTYPE html>
-
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Login</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-        <link rel="stylesheet" href="{% static 'loginstyle.css' %}">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>LNCRMS</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    </head>
-    <body>
-      
+    <!--Bootstrap CSS-->
+    
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
 
+    <!--Bootstrap ICons-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
 
-   <div class="container" style="margin-top: 150px;">  
-    <div class="col-lg-4 col-md-3 col-sm-2"></div>
-    <div class="col-lg-4 col-md-6 col-sm-8">
-        {% comment %} <div class="logo">
-            <img src="{% static 'logo.png' %}"  alt="Logo"  width="80px"> 
-        </div> {% endcomment %}
-        <div class="row loginbox">                    
-            <div class="col-lg-12">
-                <span class="singtext" >Log in </span>   
-            </div>
+    <!--Datatable CSS-->
+    
+    <link
+      rel="stylesheet"
+      href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css"
+    />
+
+    <!--Custom CSS-->
+    <link rel="stylesheet" href="{% static 'style.css' %}" />
+
+    
+
+  </head>
+  <body>
+
+  
+
+        <!--NOTIFICATIONS-->
+        {% if messages %}
+            {% for message in messages  %}
+                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                    {{message}}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            {% endfor %}
+        {% endif %}
+   
+        <div class="login-box"><h4 style="color: #01576d;">LOGIN</h4>
             <form method="POST">
                 {% csrf_token %}
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                    <input class="form-control" type="text" placeholder="Please enter your user name"  name="uName"> 
-                </div>
-                <div class="col-lg-12  col-md-12 col-sm-12">
-                    <input class="form-control" type="password" placeholder="Please enter password"  name="pWord">
-                </div>
-                <div class="col-lg-12  col-md-12 col-sm-12">
-                    <button type="submit" class="btn  submitButton">Login </button>
-                </div>   
-            </form>                  
-
-        </div>
-        <div class="row forGotPassword" style="padding: 0 0 0 0;">
-            {% if messages %}
-            {% for message in messages  %}  
-            <div class="alert alert-danger" role="alert">
-                {{message}}   
-              </div>   
-            {% endfor %}
-          {% endif %}
-        </div>
-        <br>                
-        <br>
+            <label class="lbl-pname" style="margin-top: 20px;">USERNAME</label>
+            <input name="uName" class="value-pname" style="margin-top: 5px;width: 100%;"/>
+            
+            <label class="lbl-pname" style="margin-top: 20px;">PASSWORD</label>
+            <input name="pWord" type="PASSWORD" class="value-pname" style="margin-top: 5px;width: 100%;"/>
+            
+            <button class="btn-login">LOGIN</button>
+            </form>
+            </div>
       
-    </div>
-    <div class="col-lg-4 col-md-3 col-sm-2"></div>
-</div>
+ 
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous">
+    </script>
 
-    </body>
+    
+  </body>
 </html>
+
+
+
