--- a/website/templates/medications.html
+++ b/website/templates/medications.html
@@ -10,13 +10,15 @@
 {% include "sidemenu.html" %}
 
   <!--Add new patient form-->
-  <div class="reg-area">{% include 'newpatient.html' %}</div>
+  <div class="reg-area">
+
+  </div>
 </div>
 
 <!--Table container-->
-<div class="container2">
+<div class="container3">
   <div class="table-title bg-gradient">Patient List</div>
-  <div class="table-box">{% include 'patientstable.html' %}</div>
+  <div class="table-box">dasd</div>
 </div>
 
 {%endblock%}
