--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -44,7 +44,8 @@
     <div class="title-container">
       <i class="bi bi-prescription2"></i>Patients Records Management System
     </div>
-
+     
+     <!--MAIN CONTAINER-->
     <div class="content-main">
 
         <!--NOTIFICATIONS-->
@@ -63,7 +64,7 @@
       
       </div>
 
-
+    <!--Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous">
@@ -77,6 +78,7 @@
     <!-- Data Script-->
     <script>
       $("#patienttable").DataTable({})
+      $("#medicine-table").DataTable({})
     </script>
   </body>
 </html>
