--- a/website/templates/newpatient.html
+++ b/website/templates/newpatient.html
@@ -5,15 +5,15 @@
     
     <div class="reg-row">
         <div class="reg-col">
-        <label class="reg-label">LASTNAME</label><br>
+        <label class="reg-label">Lastname</label><br>
         <input class="reg-input" name="last_name"  required>
         </div>
         <div class="reg-col">
-            <label class="reg-label">FIRSTNAME</label><br>
+            <label class="reg-label">Firstname</label><br>
             <input class="reg-input" name="first_name" required>
         </div>
         <div class="reg-col">
-            <label class="reg-label">MIDDLENAME</label><br>
+            <label class="reg-label">Middlename</label><br>
             <input class="reg-input" name="middle_name"  required>
         </div>
     </div>
@@ -21,15 +21,15 @@
     <br>    
     <div class="reg-row">
         <div class="reg-col">
-            <label class="reg-label">AGE</label><br>
+            <label class="reg-label">Age</label><br>
             <input class="reg-input" name="age" size="10px" required>
         </div>
         <div class="reg-col">
-            <label class="reg-label">BIRTHDAY</label><br>
+            <label class="reg-label">Birthday</label><br>
             <input type="date" class="reg-input" name="bday" size="15px" required>
         </div>
         <div class="reg-col">
-            <label class="reg-label">GENDER</label><br>
+            <label class="reg-label">Gender</label><br>
             <select class="reg-input" name="gender">
                 <option selected>-options-</option>
                 <option>Male</option>
@@ -38,11 +38,11 @@
               </select>
         </div>
         <div class="reg-col">
-            <label class="reg-label">CIVIL STATUS</label><br>
+            <label class="reg-label">Civil Status</label><br>
             <input class="reg-input" name="civil_status" size="20px" required> 
         </div>
         <div class="reg-col">
-            <label class="reg-label">CONTACT NUMBER</label><br>
+            <label class="reg-label">Contact Number</label><br>
             <input class="reg-input" name="contact_number" size="20px" required>
         </div>
     </div>
@@ -50,7 +50,7 @@
     <br>
     <div class="reg-row">        
         <div class="reg-col">
-            <label class="reg-label">ADDRESS</label><br>
+            <label class="reg-label">Address</label><br>
             <input class="reg-input" name="address" size="80%" required>
         </div>
     </div>
@@ -58,7 +58,7 @@
     <br>
     <div class="reg-row">        
         <div class="reg-col">
-            <label class="reg-label">REMARKS</label><br>
+            <label class="reg-label">Remarks</label><br>
             <textarea class="reg-input" cols="100%" name="remarks" required></textarea>
         </div>
     </div>
