--- a/website/templates/sidemenu.html
+++ b/website/templates/sidemenu.html
@@ -1,8 +1,8 @@
-<div class="container1">
+
     <!--Left Menus-->
     <div class="left-menu">
       <div class="active-title bg-gradient">Patient Records</div>
-      <a href="{% url "patientlist" %}">Add Patient</a>
+      <a href="{% url "patientlist" %}">Patient List</a>
       <a href="{% url "medications" %}">Medicine List</a>
       <a href="#">Prescriptions</a>
     </div>
