--- a/website/static/style.css
+++ b/website/static/style.css
@@ -216,8 +216,8 @@ li,a,strong, button {
 .reg-input{
     display: block;
     border-style: solid;
-    border-color: #b4c3d3;
-    border-radius: 5px;
+    border-color: silver;
+    border-radius: 2px;
     border-width: 1px;
     padding-left: 5px;
     width: 100%;
@@ -225,9 +225,10 @@ li,a,strong, button {
    
 }
 
-.reg-label{
-    font-size: 12px;
-    color:rgba(0, 0, 0, 0.651);
+.reg-label{   
+    font-size: 11px;
+    font-weight: 600;
+    color:black;
 }
 
 .reg-row{
@@ -245,7 +246,7 @@ li,a,strong, button {
 .btn-save{
     background-color: #0088a9;
     color: white;
-    padding: 8px 25px;
+    padding: 8px 20px;
     border-radius: 5px;
     border-style: none;
 }
@@ -280,16 +281,15 @@ tr:hover{
 
 td {
     border: 1px dotted #ddd;
-    padding: 0px 5px;
     width: auto;
   }
   
 #link-view{
     color: white;
     border: 1px solid white;
-    padding: 2px 8px;
+    padding: 5px 8px;
     background-color: #0087a99c;
-    border-radius: 5px;     
+    border-radius: 3px;     
 }
 
 #link-view:hover{
@@ -299,9 +299,9 @@ td {
 #link-edit{
     color: white;
     border: 1px solid white;
-    padding: 2px 8px;
+    padding: 5px 8px;
     background-color:rgba(0, 128, 0, 0.553);
-    border-radius: 5px;     
+    border-radius: 3px;     
 }
 
 #link-edit:hover{
@@ -311,9 +311,9 @@ td {
 #link-delete{
     color: white;
     border: 1px solid white;
-    padding: 2px 8px;
+    padding: 5px 8px;
     background-color:rgba(255, 0, 0, 0.544);
-    border-radius: 5px;    
+    border-radius: 3px;    
     width: 100%; 
 }
 
@@ -430,6 +430,22 @@ td {
 
 #message-div{
     height: 50px;
+}
+
+.medicine-input{
+    border-style: solid;
+    border-color: silver;
+    border-radius: 3px;
+    border-width: 1px;
+    padding-left: 5px;
+    padding: 2px 5px;
+    width: 100%;
+}
+
+.medicine-col{    
+    padding: 7px 0 7px 20px;
+    width: 100%;
+    
 }
 
 
