--- a/website/templates/medications.html
+++ b/website/templates/medications.html
@@ -28,7 +28,7 @@
 
     <div class="reg-row">
         <div class="medicine-col">        
-          <button class="btn-save" type="submit">save medicine</button>
+          <button class="btn-save" type="submit" name="save">save medicine</button>
         </div>   
     </div>
   </form>
@@ -50,23 +50,56 @@
           <th>Dosage</th>
           <th>Actions</th>
         </thead>
-
+       
         <tbody>
           {% for meds in medicinedata %}
           <tr>
-            <td>{{meds.id}}</td>
+            <td name="medID">{{meds.id}}</td>
             <td>{{meds.medicine_name}}</td>
             <td>{{meds.dosage}}</td>           
             <td>
-              <a href="{% url "editmedicine" meds.id %}"  id="link-edit"><i class="bi bi-pencil-square"></i></a>
+             
+              <button name="updatedetails" type='submit' value="{{meds.id}}" id="link-edit"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#record{{meds.id}}"></i></button>
+               
+              
+                
+
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="record{{meds.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                          <div class="title-form bg-gradient">Record No. {{meds.id}}</div>
+                          <div class="reg-row">
+                            <div class="medicine-col">
+                              <label class="reg-label">Medicine Name</label><br />
+                              <input class="medicine-input" value="{{meds.medicine_name}}" name="medname" required/>
+                            </div>
+                            <div class="medicine-col">
+                              <label class="reg-label">Dosage</label><br />
+                              <input class="medicine-input" value="{{meds.dosage}}" name="dosage" style="width: 90%;" required/>
+                            </div>
+                        </div>
+
+                        <div class="reg-row">
+                            <div class="medicine-col">        
+                              <button class="btn-save" type="submit" name="update">Update</button>
+                            </div>   
+                        </div>
+                        </div>
+                      </div>
+                    </div>
+                 
 
               <a href="#" id="link-delete"><i class="bi bi-trash3"></i></a>
-            
+         
+           
               
             </td>          
           </tr>
           {% endfor %}
         </tbody>
+     
       </table>
 
 
