--- a/website/templates/sidemenu.html
+++ b/website/templates/sidemenu.html
@@ -3,6 +3,6 @@
     <div class="left-menu">
       <div class="active-title bg-gradient">Patient Records</div>
       <a href="{% url "patientlist" %}">Patient List</a>
-      <a href="{% url "medications" %}">Medicine List</a>
-      <a href="#">Prescriptions</a>
+      <a href="{% url "medications" "#"%}">Medicine List</a>
+      <a href="#">Prescriptions</a> 
     </div>
