--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load custom_tags %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -47,7 +48,7 @@
      
      <!--MAIN CONTAINER-->
     <div class="content-main">
-
+    
         <!--NOTIFICATIONS-->
         {% if messages %}
             {% for message in messages  %}
